[project]
name = "python-video-tools"
version = "1.0.0"
description = "Python tools for video editing - segment extraction, splitting, merging, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "sohei-t"}
]
dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.20",
]
keywords = [
    "video",
    "ffmpeg",
    "opencv",
    "video-editing",
    "video-processing",
    "image-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.optional-dependencies]
face = ["dlib>=19.0"]
overlay = ["moviepy>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
audio-extractor = "audio-extractor.audio_extractor:main"
video-compressor = "video-compressor.video_compressor:main"
video-speed-changer = "video-speed-changer.video_speed_changer:main"
frame-extractor = "frame-extractor.frame_extractor:main"

[project.urls]
Homepage = "https://github.com/sohei-t/python-video-tools"
Repository = "https://github.com/sohei-t/python-video-tools"
Issues = "https://github.com/sohei-t/python-video-tools/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
